Issue #2226781 by johnv: Changed Workflow Access page to use Entity UI.
Issue #2226781 by johnv: Changed Workflow Clean up page to use Entity UI.
Issue #2220065 by zihong0, johnv: Fixed workflow_access_node_access_records() is not called from node_save().
Issue #2220065 by johnv: Fixed better filters WorkflowTransition->execute().
Issue #2209359 by johnv: Fixed submitting workflow access settings, does not trigger access rebuild for workflow_field.
Issue #2209359 by johnv: Fixed better UX for workflow_access pages, and removing a hook for better performance.
Issue #2230833 by johnv: Fixed deleting/fetching ScheduledTransitions, when having multiple workflow_fields per node.
Issue #2226781 by johnv: Fixed parameters of workflow_admin_ui_edit_form_validate().
Issue #2230833 by johnv: Fixed showing ScheduledTransitions, when having multiple workflow_fields per node.
Issue #2226781 by johnv: Fixed screen flow of workflow_admin_ui_edit_form().
Issue #2209359 by johnv: Fixed workflow_access_node_access_records() in case of Access Rebuild of Workflow Fields.
Issue #2209359 by johnv: Fixed error message in workflow_access.
Issue #2019345 by johnv: Added parameter 'transition' to hook_workflow().
Issue #2019345 by johnv: Added error message when setting state on non-relevant entity.
Issue #2209359 by johnv: Fixed error in workflow_actions with workflow_field and workflow_access enabled.
Issue #2229635 by johnv: Fixed Undefined index: entity_type in workflow_vbo_next_state_action().
Issue #2231903 by johnv: Fixed usage of field_info_field_map() under D7.22.
Issue #2168197 by johnv: Fixed support of VBO 'modify entity values' for workflow_field.
Issue #2102409 by johnv: Removed $workflow->getWorkfowItem() c.s., which is not needed anymore.
Issue #1649216 by johnv: Changed display of 'author' and 'creation' on admin pages, to avoid confusion when 'autor' role is defined. 